more fixes and updates

--- a/Branch.App/Areas/Halo4/Views/Game/PlayerList.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Game/PlayerList.cshtml
@@ -238,7 +238,7 @@
 										{
 											<li class="list-group-item">
 												<span class="badge">
-													@if (player.KilledMostGamertag == GeneralHelpers.RemoveGuestIdentifier(player.KilledMostGamertag))
+													@if (player.KilledByMostGamertag == GeneralHelpers.RemoveGuestIdentifier(player.KilledByMostGamertag))
 													{
 														// Not a Guest
 														@Html.ActionLink(BranchHelpers.CheckGamertagPrivacy(player.KilledByMostGamertag), "Index", "ServiceRecord",
