--- a/Branch.App/Areas/Halo4/Views/Shared/HeaderServiceRecord.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Shared/HeaderServiceRecord.cshtml
@@ -13,7 +13,7 @@
 					<div class="col-md-10">
 						<h1>
 							@BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag)
-							<img class="" alt="" src="@GeneralHelpers.GetCsrLevelUrl(GeneralHelpers.GetHighestCsr(serviceRecord.TopSkillRank))" />
+							<img class="hidden-xs" alt="" src="@GeneralHelpers.GetCsrLevelUrl(GeneralHelpers.GetHighestCsr(serviceRecord.TopSkillRank))" />
 						</h1>
 						<h2>@serviceRecord.ServiceTag</h2>
 						<img class="visible-xs" alt="" src="@GeneralHelpers.GetCsrLevelUrl(GeneralHelpers.GetHighestCsr(serviceRecord.TopSkillRank))" />
