--- a/Branch.App/Views/Shared/_Layout.cshtml
+++ b/Branch.App/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 			<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.0/jquery.cookie.min.js"></script>
 			<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
 			@Scripts.Render("~/bundles/flash")
 
 			<script>
