--- a/Branch.App/Areas/Halo4/Views/Home/Index.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Home/Index.cshtml
@@ -1,24 +1,209 @@
-﻿@{
+﻿@using Branch.App.Helpers.Razor
+@model Branch.App.Areas.Halo4.Models.HomeViewModel
+@{
 	ViewBag.Title = "Halo 4";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 	ViewBag.Template = "halo4 halo4_homepage";
 	ViewBag.AlternativeFooter = true;
 }
 
-<article>
-	<div id="content" style="color: white; background-color: #3d3d7c; background-color: rgba(61,61,124,0.5);">
-		<div class="container">
-			<h1>
-				Halo 4
-			</h1>
+<div id="content" class="bs-header" style="text-align: center;">
+	<div class="container">
+		<h1>
+			Halo 4
+		</h1>
+		<p>
+			le tips fedora
+		</p>
+	</div>
+</div>
+	
+<div class="container stats-marketing">
+	<div class="row central">
+		<div class="col-md-4">
+			<canvas id="total-playlist-population" width="140" height="140"></canvas>
+
+			<h2>All Playlists</h2>
 			<p>
-				yolo swag nigga
+				There are currently 69 people playing Halo 4 Online.
+			</p>
+		</div>
+		<div class="col-md-4">
+			<canvas id="team-playlist-population" width="140" height="140"></canvas>
+
+			<h2>Team Playlists</h2>
+			<p>
+				There are currently 69 people playing Team based CSR Playlists.
+			</p>
+		</div>
+		<div class="col-md-4">
+			<canvas id="indvidual-playlist-population" width="140" height="140"></canvas>
+
+			<h2>Indvidual Playlists</h2>
+			<p>
+				There are currently 69 people playing Indvidual based CSR Playlists.
 			</p>
 		</div>
 	</div>
-</article>
+</div>
+
+<div class="leaferboards highlight-sector" style="background-image: url('/Content/Images/Area/Halo4/leaderboard-overview.png');">
+	<div class="container">
+		<h1>CSR Leaderboards</h1>
+		<p>
+			Check how you compare to your friends in CSR leaderboards over on
+			<a href="http://leafapp.co/h4/csr_leaderboards" target="_blank">Leaf</a>!
+		</p>
+	</div>
+</div>
+
+<div class="container stats-marketing">
+	<div class="row central">
+		<div class="col-md-3">
+			<canvas id="alltime-player-kills-deaths" width="140" height="140"></canvas>
+			
+			<h2>Kills/Deaths</h2>
+			<p>
+				Players have obtained @(BranchHelpers.NumberWithDelimiter(Model.AllTimeStats.WarGamesKills)) kills and @(BranchHelpers.NumberWithDelimiter(Model.AllTimeStats.WarGamesDeaths)) 
+				deaths in @(BranchHelpers.NumberWithDelimiter(Model.AllTimeStats.WarGamesGames)) games in all time.
+			</p>
+		</div>
+		<div class="col-md-3">
+			<canvas id="alltime-player-wins-losses" width="140" height="140"></canvas>
+			
+			<h2>Games Played</h2>
+			<p>
+				Players have played @(BranchHelpers.NumberWithDelimiter(Model.WeeklyStats.WarGamesGames)) games this week and have played @(BranchHelpers.NumberWithDelimiter(Model.AllTimeStats.WarGamesGames)) 
+				games in total.
+			</p>
+		</div>
+		<div class="col-md-3">
+			<canvas id="weekly-player-kills-deaths" width="140" height="140"></canvas>
+
+			<h2>Kills/Deaths</h2>
+			<p>
+				Players have obtained @(BranchHelpers.NumberWithDelimiter(Model.WeeklyStats.WarGamesKills)) kills and @(BranchHelpers.NumberWithDelimiter(Model.WeeklyStats.WarGamesDeaths)) 
+				deaths in @(BranchHelpers.NumberWithDelimiter(Model.WeeklyStats.WarGamesGames)) games this week.
+			</p>
+		</div>
+		<div class="col-md-3">
+			<canvas id="alltime-wargames-time" width="140" height="140"></canvas>
+
+			<h2>Time Played</h2>
+			<p>
+				Players have played @BranchHelpers.MakeTimeSpanFriendly(TimeSpan.Parse(Model.WeeklyStats.WarGamesDuration)) of Halo 4 this week, and
+				@BranchHelpers.MakeTimeSpanFriendly(TimeSpan.Parse(Model.WeeklyStats.WarGamesDuration)) of Halo 4 since launch.
+			</p>
+		</div>
+	</div>
+</div>
+
+<div class="top-ten highlight-sector" style="background-image: url('/Content/Images/Area/Halo4/top-ten-overview.png');">
+	<div class="container">
+		<h1>Top Ten Leaderboards</h1>
+		<p>
+			Check the top ten players in the world in a variety of achievements over on
+			<a href="http://leafapp.co/h4/top_ten" target="_blank">Leaf</a>!
+		</p>
+	</div>
+</div>
+
 
 @section scripts {
+	<!-- Playlist Stats -->
+	<script>
+		var ctx = document.getElementById("total-playlist-population").getContext("2d");
+		new Chart(ctx).Doughnut(
+			[
+				{
+					value: 69,
+					color: '#949FB1'
+				}
+			]);
+		ctx = document.getElementById("team-playlist-population").getContext("2d");
+		new Chart(ctx).Doughnut(
+			[
+				{
+					value: 69,
+					color: '#4D5360'
+				},
+				{
+					value: 69,
+					color: '#F7464A'
+				}
+			]);
+		ctx = document.getElementById("indvidual-playlist-population").getContext("2d");
+		new Chart(ctx).Doughnut(
+			[
+				{
+					value: 69,
+					color: '#4D5360'
+				},
+				{
+					value: 69,
+					color: '#F7464A'
+				}
+			]);
+	</script>
+
+	<!-- WarGames Stats -->
+	<script>
+		var ctx = document.getElementById("alltime-player-kills-deaths").getContext("2d");
+		new Chart(ctx).Doughnut(
+			[
+				{
+					value: @(Model.AllTimeStats.WarGamesKills),
+					color: '#949FB1'
+				},
+				{
+					value: @(Model.AllTimeStats.WarGamesDeaths),
+					color: '#F7464A'
+				}
+			]);
+		ctx = document.getElementById("alltime-player-wins-losses").getContext("2d");
+		new Chart(ctx).Doughnut(
+			[
+				{
+					value: @(Model.WeeklyStats.WarGamesGames),
+					color: '#949FB1'
+				},
+				{
+					value: @(Model.AllTimeStats.WarGamesGames),
+					color: '#F7464A'
+				}
+			]);
+		ctx = document.getElementById("weekly-player-kills-deaths").getContext("2d");
+		new Chart(ctx).Doughnut(
+			[
+				{
+					value: @(Model.WeeklyStats.WarGamesKills),
+					color: '#949FB1'
+				},
+				{
+					value: @(Model.WeeklyStats.WarGamesDeaths),
+					color: '#F7464A'
+				}
+			]);
+		ctx = document.getElementById("alltime-wargames-time").getContext("2d");
+		new Chart(ctx).Doughnut(
+			[
+				{
+					value: @(TimeSpan.Parse(Model.WeeklyStats.WarGamesDuration).Minutes),
+					color: '#949FB1'
+				},
+				{
+					value: @(TimeSpan.Parse(Model.AllTimeStats.WarGamesDuration).Minutes),
+					color: '#F7464A'
+				}
+			]);
+	</Script>
+
+	<!-- Challenge Stats -->
+	<script>
+		
+	</script>
+
+	<!-- Background Images -->
 	<script>
 		var imagesCount = 4;
 
@@ -60,4 +245,5 @@
 			}, 4500);
 		});
 	</script>
+
 }
