--- a/Branch.App/Views/Shared/Footer.cshtml
+++ b/Branch.App/Views/Shared/Footer.cshtml
@@ -4,7 +4,7 @@
 	var linkType = "";
 	if (Model)
 	{
-		customStyle = "color: #fff; border-top: 0px;";
+		customStyle = "color: #fff; border-top: 0px; background-color: #3d3d7c;";
 		linkType = "alt";
 	}
 }
