--- a/Branch.App/Content/Styles/bootstrap-branch.css
+++ b/Branch.App/Content/Styles/bootstrap-branch.css
@@ -376,7 +376,7 @@
   color: #cdbfe3;
   background-color: #3d3d7c;
   font-size: 21px;
-  text-align: left;
+  text-align: center;
   padding: 30px 15px 40px; }
   .bs-header h1 {
     font-size: 60px;
