--- a/Branch.App/Content/Styles/application.css
+++ b/Branch.App/Content/Styles/application.css
@@ -221,7 +221,8 @@ body.search .focus-col {
   margin-top: 35px; }
 
 body.halo4 .halo4-header {
-  height: 300px; }
+  height: 300px;
+  text-align: left; }
   @media (max-width: 767px) {
     body.halo4 .halo4-header {
       height: 350px; } }
@@ -890,4 +891,7 @@ body.halo4_game_history .game-details #overview {
         body.halo4_game_history .game-details #overview .graph-container .morris-hover > .graph-hover-legend > .key, body.halo4_game_history .game-details #overview .graph-container .morris-default-style > .graph-hover-legend > .key {
           font-weight: 600;
           font-size: 14px; }
+
+body.halo4_halo4_playlists {
+  color: pink; }
 
