--- a/Branch.App/Content/Styles/application.css
+++ b/Branch.App/Content/Styles/application.css
@@ -892,6 +892,61 @@ body.halo4_game_history .game-details #overview {
           font-weight: 600;
           font-size: 14px; }
 
-body.halo4_halo4_playlists {
-  color: pink; }
+body.halo4_playlists .playlist-entry .meta {
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: 10px;
+  padding: 0;
+  height: 200px;
+  color: #eee; }
+  body.halo4_playlists .playlist-entry .meta .mask {
+    background: -moz-linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(0, 0, 0, 0.65)), color-stop(100%, rgba(0, 0, 0, 0)));
+    background: -webkit-linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    background: -o-linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    background: -ms-linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 );
+    height: 100%; }
+  body.halo4_playlists .playlist-entry .meta .content {
+    height: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-top: 25px;
+    margin-left: 25px; }
+    body.halo4_playlists .playlist-entry .meta .content strong {
+      font-size: 25px; }
+    body.halo4_playlists .playlist-entry .meta .content .players {
+      opacity: 0.5;
+      position: absolute;
+      bottom: 11px;
+      right: 0;
+      overflow: hidden; }
+      body.halo4_playlists .playlist-entry .meta .content .players .count {
+        font-size: 80px;
+        font-weight: 500;
+        bottom: 0;
+        right: -10px; }
+body.halo4_playlists .playlist-entry .extra-shit-is-in-tabs {
+  margin-top: 220px; }
+  body.halo4_playlists .playlist-entry .extra-shit-is-in-tabs .tab-content > .tab-pane {
+    margin: 15px; }
+    body.halo4_playlists .playlist-entry .extra-shit-is-in-tabs .tab-content > .tab-pane.gvar td > .icon-frame {
+      width: 120px;
+      height: 120px;
+      background-color: #3d3d7c;
+      background-position: center;
+      background-repeat: no-repeat; }
+    body.halo4_playlists .playlist-entry .extra-shit-is-in-tabs .tab-content > .tab-pane.mvar td > .preview-frame {
+      width: 180px;
+      height: 130px;
+      background-color: #3d3d7c;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat; }
+    body.halo4_playlists .playlist-entry .extra-shit-is-in-tabs .tab-content > .tab-pane.mvar td > .name {
+      width: 130px; }
 
