--- a/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
+++ b/Branch.App/Areas/Halo4/Views/Shared/Sidebar.cshtml
@@ -7,7 +7,7 @@
 	var serviceRecord = @Model.ServiceRecord;
 	Enums.Pages currentPage = ViewBag.CurrentH4Page;
 	_343Enums.CommendationCategory? currentCommendationCategory = ViewBag.CurrentCommendationCategory;
-	_343Enums.Mode? currentHistoryMode = ViewBag.CurrentHistoryMode;
+	_343Enums.GameMode? currentHistoryMode = ViewBag.CurrentHistoryMode;
 }
 <div class="bs-sidebar" data-spy="affix" data-offset-top="308">
 	<ul class="nav bs-sidenav">
@@ -27,7 +27,7 @@
 					@if (currentPage == Enums.Pages.GameHistory)
 					{
 						<ul class="nav">
-							@foreach (var gameMode in (_343Enums.Mode[])Enum.GetValues(typeof(_343Enums.Mode)))
+							@foreach (var gameMode in (_343Enums.GameMode[])Enum.GetValues(typeof(_343Enums.GameMode)))
 							{
 								<li class="@BranchHelpers.CompareEnum(currentHistoryMode, gameMode, "active")">
 									@Html.RouteLink(gameMode.ToString().MakeCamelCaseFriendly(), "Halo4_History", new { slug = gameMode.ToString(), gamertag = BranchHelpers.CheckGamertagPrivacy(serviceRecord.Gamertag) })
