--- a/Branch.App/Content/Styles/Halo4/_challenges.scss
+++ b/Branch.App/Content/Styles/Halo4/_challenges.scss
@@ -1,3 +1,18 @@
-body
-{
+body.halo4_challenges {
+	.challenges-container {
+		margin-top: 60px;
+
+		.challenge-entry {
+			height: 180px;
+			margin: 20px 0;
+
+			@media (max-width: 991px) {
+				height: 90px;
+			}
+
+			background-position: left bottom;
+			background-repeat: no-repeat;
+			border-bottom: 1px solid #eee;
+		}
+	}
 }
