--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -42,7 +42,7 @@
 					</ul>
 				</li>
 				<li class="">
-					@Html.ActionLink("Blog", "Index", "Home", new { area = "" }, null)
+					@Html.ActionLink("Blog", "Index", "Blog", new { area = "" }, null)
 				</li>
 				<li class="">
 					@Html.ActionLink("About", "Index", "About", new { area = "" }, null)
