--- a/Branch.App/Views/Shared/Header.cshtml
+++ b/Branch.App/Views/Shared/Header.cshtml
@@ -25,10 +25,10 @@
 						<li class="divider"></li>
 						<li class="dropdown-header">Waypoint</li>
 						<li>
-							@Html.ActionLink("Playlists", "Index", "Playlists", new { area = "Halo4" }, null)
+							@Html.ActionLink("Playlists", "Index", "Playlists", new { area = "Halo4", slug = "wargames" }, null)
 						</li>
 						<li>
-							@Html.ActionLink("Challenges", "Index", "Challenges", new { area = "Halo4" }, null)
+							@Html.ActionLink("Challenges", "Index", "Challenges", new { area = "Halo4", slug = "wargames" }, null)
 						</li>
 
 						<li class="divider"></li>
